# rust-web-book

./: .gitignore  Cargo.toml  Makefile.toml  compose.yaml
adapter/: Cargo.toml
adapter/migrations/: 20241003002620_start.down.sql  20241003002620_start.up.sql
adapter/src/database/: auth.rs  book.rs  mod.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  user.rs
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  user.rs
api/src/route/: book.rs  health.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/: id.rs  lib.rs
kernel/src/model/: list.rs  mod.rs  user.rs
kernel/src/model/auth/: event.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/model/user/: event.rs
kernel/src/repository/: auth.rs  book.rs  user.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs  lib.rs
src/: main.rs
